# project-euler

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.json
.claude/skills/review-exo/: SKILL.md  conventions.md
01-fondamentaux/: COMPILER.md  README.md  check.hpp
01-fondamentaux/cours/: cours.tex
01-fondamentaux/exercices/01-echauffement/: echauffement.hpp  echauffement_skeleton.cpp  echauffement_test.cpp  enonce.md
01-fondamentaux/exercices/02-temperatures/: enonce.md  temperatures.hpp  temperatures_skeleton.cpp  temperatures_test.cpp
01-fondamentaux/exercices/02b-valeur-vs-reference/: enonce.md  valref.hpp  valref_skeleton.cpp  valref_test.cpp
01-fondamentaux/exercices/03-const-correctness/: constref.hpp  constref_skeleton.cpp  constref_test.cpp  enonce.md
01-fondamentaux/exercices/03-valeur-reference/: enonce.md  valref.hpp  valref_skeleton.cpp  valref_test.cpp
01-fondamentaux/exercices/03b-auto-types/: autotypes.hpp  autotypes_skeleton.cpp  autotypes_test.cpp  enonce.md
01-fondamentaux/exercices/04-const-exceptions/: constref.hpp  constref_skeleton.cpp  constref_test.cpp  enonce.md
01-fondamentaux/exercices/04-echange-rotation/: enonce.md  rotation.hpp  rotation_skeleton.cpp  rotation_test.cpp
01-fondamentaux/exercices/05-stats-vector/: enonce.md  stats_vec.hpp  stats_vec_skeleton.cpp  stats_vec_test.cpp
01-fondamentaux/exercices/05-surcharge/: describe.hpp  describe_skeleton.cpp  describe_test.cpp  enonce.md
01-fondamentaux/exercices/06-fizzbuzz/: enonce.md  fizzbuzz.hpp  (+2 more)
01-fondamentaux/projet/: COMPILER.md
02-string-vector/: COMPILER.md  README.md
02-string-vector/cours/: cours.tex  preambule.tex
03-io-flux-parsing/: COMPILER.md  README.md
03-io-flux-parsing/cours/: cours.tex
04-optional-map-projet/: COMPILER.md  README.md  check.hpp
04-optional-map-projet/cours/: cours.tex
04-optional-map-projet/projet/: enonce.md
07-poo-classes-raii/: README.md
_template-chapitre/: README.md
_template-chapitre/cours/: cours.tex
cmake/: CompilerWarnings.cmake
common/: check.hpp
solutions/: README.md
(+133 files in other folders)
